Changed pin img size

--- a/top-content/map.html
+++ b/top-content/map.html
@@ -76,7 +76,7 @@
             {x: 10.5, y: 26.93, href: "../places/lost-forest.html"},
             {x: 44.67, y: 8.5, href: "../animals/gemsbok.html"},
             {x: 50.53, y: 15.84, href: "../animals/pandas.html"},
-            {x: 73.46, y: 22.57, href: "../animals/lions.html"},
+            {x: 69.2, y: 19, href: "../animals/lions.html"},
             {x: 74, y: 34.85, href: "../animals/elephants.html"},
             {x: 59.33, y: 42.77, href: "../animals/warthog.html"},
             {x: 74.13, y: 53.27, href: "../places/restaurant.html"},
@@ -95,19 +95,20 @@
             // add pins
             for (let pin of pins) {
                 let {x, y, href} = pin;
-                const img = document.createElement("img");
-                img.src = "../images/red-pin.png";
-                img.style.width = "5vmax";
-                img.style.height = "5vmax";
+                const pinImg = document.createElement("img");
+                pinImg.src = "../images/red-pin.png";
+                pinImg.style.width = "2.5vmax";
+                pinImg.style.height = "2.5vmax";
                 const a = document.createElement("a");
-                a.appendChild(img);
+                a.appendChild(pinImg);
                 a.href = href;
                 a.setAttribute("class", "pin");
+                document.body.appendChild(a);
+                const {width, height} = getComputedStyle(pinImg)
                 x = mapImg.clientWidth * (x / 100);
                 y = mapImg.clientHeight * (y / 100);
-                a.style.left = `calc(${mapImg.offsetLeft + x}px - 2.5vmax)`;
-                a.style.top = `calc(${mapImg.offsetTop + y}px - 5vmax)`;
-                document.body.appendChild(a);
+                a.style.left = `calc(${mapImg.offsetLeft + x}px - 0.5 * ${width})`;
+                a.style.top = `calc(${mapImg.offsetTop + y}px - ${height})`;
             }
         }
 
