Fixed warthog link

--- a/top-content/animals.html
+++ b/top-content/animals.html
@@ -56,7 +56,7 @@
                 <span class="stylish-list-name">Gorilla</span>
                 <p class="stylish-list-desc">Kong the gorilla is much friendlier than he looks</p>
             </a>
-            <a href="../animals/warthogs.html" class="stylish-list-item">
+            <a href="../animals/warthog.html" class="stylish-list-item">
                 <img  src="../images/warthog-tn.png">
                 <span class="stylish-list-name">Warthogs</span>
                 <p class="stylish-list-desc">Find out more about this funny-looking fellow</p>
