Fixed infobox bug
On pages with multiple infoboxes, occasionally, the wrong infobox would close or `TypeError: currentInfoBox is null` would be thrown.

--- a/top-content/map.html
+++ b/top-content/map.html
@@ -14,7 +14,8 @@
             }
 
             #instructions {
-                display: block;
+                height: 1em;
+                vertical-align: middle;
                 text-align: center;
                 margin: 1% 0 0 0;
             }
@@ -77,7 +78,7 @@
             {x: 44.67, y: 8.5, href: "../animals/gemsbok.html"},
             {x: 50.53, y: 15.84, href: "../animals/pandas.html"},
             {x: 69.2, y: 19, href: "../animals/lions.html"},
-            {x: 74, y: 34.85, href: "../animals/elephants.html"},
+            {x: 76.13, y: 35.84, href: "../animals/elephants.html"},
             {x: 59.33, y: 42.77, href: "../animals/warthog.html"},
             {x: 74.13, y: 53.27, href: "../places/restaurant.html"},
             {x: 32.8, y: 30.89, href: "../places/gorilla.html"},
