Added <title> elements

--- a/root/animals/elephants.html
+++ b/root/animals/elephants.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="../common.css">
         <link rel="stylesheet" href="style.css">
         <script src="index.js" async="false"></script>
+        <title>Elephants | Pine City Zoo</title>
     </head>
     <body>
         
