--- a/root/places/coffee-shop.html
+++ b/root/places/coffee-shop.html
@@ -9,6 +9,7 @@
                 font-weight: bold;
             }
         </style>
+        <title>Wild Things Coffee Shop | Pine City Zoo</title>
     </head>
     <body>
         
