--- a/root/places/lost-forest.html
+++ b/root/places/lost-forest.html
@@ -9,6 +9,7 @@
                 font-weight: bold;
             }
         </style>
+        <title>Lost Forest | Pine City Zoo</title>
     </head>
     <body>
         
