--- a/root/places/monkey-trail.html
+++ b/root/places/monkey-trail.html
@@ -9,6 +9,7 @@
                 font-weight: bold;
             }
         </style>
+        <title>Monkey Trail | Pine City Zoo</title>
     </head>
     <body>
         
