--- a/root/places/restaurant.html
+++ b/root/places/restaurant.html
@@ -9,6 +9,7 @@
                 font-weight: bold;
             }
         </style>
+        <title>Dine @ the Zoo | Pine City Zoo</title>
     </head>
     <body>
         
