--- a/root/top-content/animals.html
+++ b/root/top-content/animals.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="../common.css">
         <link rel="stylesheet" href="stylish-list.css">
+        <title>Animals | Pine City Zoo</title>
     </head>
     <body>
         
