--- a/root/top-content/map.html
+++ b/root/top-content/map.html
@@ -41,6 +41,7 @@
                 position: absolute;
             }
         </style>
+        <title>Map | Pine City Zoo</title>
     </head>
     <body>
         
