--- a/root/animals/monkeys.html
+++ b/root/animals/monkeys.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="../common.css">
         <link rel="stylesheet" href="style.css">
         <script async="false" src="index.js"></script>
+        <title>Monkeys | Pine City Zoo</title>
     </head>
     <body>
         
