--- a/root/places/amphitheatre.html
+++ b/root/places/amphitheatre.html
@@ -9,6 +9,7 @@
                 font-weight: bold;
             }
         </style>
+        <title>Amphitheatre | Pine City Zoo</title>
     </head>
     <body>
         
