--- a/root/places/insect-house.html
+++ b/root/places/insect-house.html
@@ -9,6 +9,7 @@
                 font-weight: bold;
             }
         </style>
+        <title>Insect House | Pine City Zoo</title>
     </head>
     <body>
         
