--- a/root/places/pizza-shop.html
+++ b/root/places/pizza-shop.html
@@ -9,6 +9,7 @@
                 font-weight: bold;
             }
         </style>
+        <title>Pizza Shop | Pine City Zoo</title>
     </head>
     <body>
         
